<resources>
    <string name="app_name">3Ayuda</string>
    <string name="boton">Acceder</string>
    <string name="mail">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="conf">Confirmar</string>
    <string name="age">Edad</string>
    <string name="phone">Teléfono</string>
    <string name="perfil">PERFIL</string>
    <string name="personal">Personal de Servicio</string>
    <string name="bienvenida">BIENVENIDO</string>
    <string name="colonia_hint"><font size="24">Dirección</font></string>
    <string name="calle_hint"><font size="24">Calle</font></string>
    <string name="casa_hint"><font size="24"># Casa</font></string>
    <string name="ubicacion">UBICACIÓN</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="comentarios">OPINIÓN DEL SERVICIO</string>
    <string name="serviciospendientes">PENDIENTES</string>
    <string name="enviar">ENVIAR</string>
    <string name="contratar">CONTRATAR</string>
    <string name="pendientes">Pendientes</string>
</resources>
